# emms-sdk

./: .gitignore  .mcp.json  ABYSS_TESTS_REPORT.md  ADDITIONAL_TESTS_REPORT.md  CHANGELOG.md  CLAUDE_MODEL_COMPARISON.md  CRITICAL_TESTS_REPORT.md  DEEP_TESTS_REPORT.md  DOLPHIN_TEST_REPORT.md  EXTENDED_TESTS_REPORT.md  FINAL_LIMITS_REPORT.md  FRONTIER_TESTS_REPORT.md  HOW_TO_REPRODUCE.md  IDENTITY_TEST_REPORT.md  IMPOSSIBLE_TESTS_REPORT.md  LICENSE  LIMITS_TESTS_REPORT.md  MECHANICS_REPORT.md  META_TESTS_REPORT.md  PERSISTENCE_EXPERIMENT.md  PHILOSOPHICAL_TESTS_REPORT.md  PHILOSOPHICAL_TESTS_V2_REPORT.md  README.md  TEST_REPORT.md  claude_model_comparison_log.json  demo_claude_models_test.py  demo_deepseek8b_test.py  demo_dolphin_test.py  demo_full.py  demo_identity_test.py  demo_ollama.py  dolphin_test_log.json  emms_web.py  experiment_abyss.py  experiment_additional_tests.py  experiment_critical_tests.py  experiment_deep.py  experiment_extended_tests.py  experiment_frontier.py  experiment_impossible.py  (+15 more)
benchmarks/: dataset.py  run.py
examples/: claude_code_config.json  claude_desktop_config.json
npm-wrapper/: index.js  package.json
paper/: references.bib  v7.tex
scripts/: backfill_market_embodiment.py  update_claude_md.py
src/emms/: __init__.py  cli.py  emms.py  mcp_entry.py  scheduler.py
src/emms/adapters/: __init__.py  agent.py  http_server.py  mcp_server.py
src/emms/agi/: __init__.py  gap2_prompt.py  gap3_affect.py  gap4_agency.py  gap5_grounding.py  gap6_self_model.py  gap7_reasoning.py
src/emms/analytics/: memory_analytics.py  timeline.py
src/emms/context/: budget.py  rag_builder.py  token_manager.py
src/emms/core/: embeddings.py  events.py  importance.py  models.py
src/emms/crossmodal/: binding.py
src/emms/daemon/: cognitive_loop.py  consciousness_daemon.py  consciousness_daemon_v2.py  trader_daemon.py
src/emms/embodiment/: base.py  financial.py  financial_wisdom.py
src/emms/episodes/: boundary.py
src/emms/hooks/: tool_observer.py
src/emms/identity/: coherence_budget.py  consciousness.py  contradiction_awareness.py  ego.py  norm_filter.py  values_drift.py
src/emms/integrations/: __init__.py  claude_injector.py  llm.py
src/emms/llm/: __init__.py  consolidator.py
src/emms/memory/: abductive_reasoner.py  abstraction.py  adversity.py  analogy.py  annealing.py  annotation.py  association.py  attention.py  autonomy_governor.py  belief_revision.py  bias.py  blending.py  causal.py  clustering.py  communities.py  compression.py  conceptual_explorer.py  counterfactual.py  curiosity.py  decay.py  diff.py  dilemma.py  dream.py  efficacy.py  emotion.py  episodic.py  epistemic_evolution.py  forgetting.py  functional_affect.py  goal_generator.py  goals.py  graph.py  hierarchical.py  hierarchical_planner.py  hierarchy.py  insight.py  inventor.py  live_self_model.py  metacognition.py  mood_trajectory.py  (+29 more)
src/emms/metrics/: crr.py  dashboard.py  ics.py  tai.py
src/emms/pipeline/: __init__.py  realtime.py
src/emms/prompts/: __init__.py  identity.py
src/emms/retrieval/: __init__.py  adaptive.py  affective.py  associative.py  contextual.py  hybrid.py  planner.py  strategies.py
src/emms/sessions/: __init__.py  bridge.py  conversation.py  manager.py  presence.py  temporal.py  wake_protocol.py
src/emms/storage/: base.py  chroma.py  federation.py  index.py
src/emms/watchers/: __init__.py  market_data.py  paper_trader.py  trading_bot.py
tests/: test_abductive_reasoner.py  test_advanced_episodes.py  test_agent_adapter.py  test_async.py  test_autonomy_governor.py  test_chroma.py  test_cognitive_loop.py  test_compression.py  test_conceptual_explorer.py  test_consciousness.py  test_crossmodal.py  test_e2e_scenario.py  test_embedding_retrieval.py  test_embeddings.py  test_episodes.py  test_events.py  test_functional_affect.py  test_goal_generator.py  test_goals_persistence.py  test_graph_memory.py  test_hierarchical.py  test_hierarchical_planner.py  test_identity.py  test_integration.py  test_live_self_model.py  test_models.py  test_patterns.py  test_persistence.py  test_reality_checker.py  test_reasoning_verifier.py  test_soft_prompt_adapter.py  test_storage.py  test_strategies.py  test_temporal_grounder.py  test_token_manager.py  test_v040_integration.py  test_v050_features.py  test_v060_features.py  test_v070_features.py  test_v080_features.py  (+19 more)
