[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emms"
version = "0.4.0"
description = "Enhanced Memory Management System — persistent hierarchical memory with graph memory, consciousness, and multi-strategy retrieval for AI agents"
authors = [{name = "Shehzad Ahmed"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
graph = ["networkx>=3.0"]
ml = ["scikit-learn>=1.3"]
chroma = ["chromadb>=0.4"]
embeddings = ["sentence-transformers>=2.2"]
llm-anthropic = ["anthropic>=0.25"]
llm-openai = ["openai>=1.0"]
pipeline = ["aiohttp>=3.9"]
all = ["networkx>=3.0", "scikit-learn>=1.3", "chromadb>=0.4", "aiohttp>=3.9"]
bench = ["letta>=0.4", "tabulate>=0.9"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "chromadb>=0.4",
    "tabulate>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/emms"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
