[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emms-mcp"
version = "0.27.0"
description = "MCP server with 129 cognitive memory tools for AI agents — persistent memory, emotional recall, knowledge graphs, metacognition, goal tracking, and more"
authors = [{name = "Shehzad Ahmed"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "memory", "ai-agents", "cognitive-architecture", "model-context-protocol", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
graph = ["networkx>=3.0"]
ml = ["scikit-learn>=1.3"]
chroma = ["chromadb>=0.4"]
embeddings = ["sentence-transformers>=2.2"]
llm-anthropic = ["anthropic>=0.25"]
llm-openai = ["openai>=1.0"]
pipeline = ["aiohttp>=3.9"]
all = ["networkx>=3.0", "scikit-learn>=1.3", "chromadb>=0.4", "aiohttp>=3.9", "sentence-transformers>=2.2"]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
bench = ["letta>=0.4", "tabulate>=0.9"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "chromadb>=0.4",
    "tabulate>=0.9",
]

[project.scripts]
emms = "emms.cli:main"
emms-mcp = "emms.mcp_entry:main"

[project.urls]
Homepage = "https://github.com/supermaxlol/emms-mcp"
Documentation = "https://github.com/supermaxlol/emms-mcp#readme"
Repository = "https://github.com/supermaxlol/emms-mcp"
"Bug Tracker" = "https://github.com/supermaxlol/emms-mcp/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "benchmarks/",
    "journal/",
    "chats/",
    "paper/",
    "web/",
    "scripts/",
    "*_log.json",
    "*_REPORT.md",
    "experiment_*.py",
    "demo_*.py",
    "__pycache__/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/emms"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
